# pyrev

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.rs  build.sh  bump-version.py  code.txt  code2.txt  codeall.txt  get-dis.bat  get-dis.sh  optest.py  run-all.bat  run-all.sh  test.py  test2.py  update-doc.bat  update-doc.sh
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/pyrev/: all.html  fn.main.html  index.html  macro.error.html  macro.info.html  macro.warn.html  sidebar-items.js  type.Result.html
doc/pyrev/app/: index.html  sidebar-items.js  struct.App.html  type.Result.html
doc/pyrev/core/: index.html  sidebar-items.js
doc/pyrev_app/: all.html  index.html  sidebar-items.js
doc/pyrev_app/app/: index.html  sidebar-items.js  struct.App.html
doc/pyrev_app/plugin/: index.html  sidebar-items.js  struct.PluginsTupleMarker.html  trait.Plugin.html  (+1 more)
doc/pyrev_ast/: all.html  derive.Common.html  derive.Expression.html  derive.GetOffset.html  derive.Is.html  derive.Query.html  derive.Unwrap.html  enum.ContainerType.html  enum.ExpressionEnum.html  enum.UnaryType.html  index.html  sidebar-items.js  struct.Alias.html  struct.Assert.html  struct.Assign.html  struct.Attribute.html  struct.Await.html  struct.BaseValue.html  struct.BinaryOperation.html  struct.Call.html  struct.Class.html  struct.Container.html  struct.Except.html  struct.Expr.html  struct.FastVariable.html  struct.Finally.html  struct.For.html  struct.Format.html  struct.FormatValue.html  struct.Function.html  struct.If.html  struct.Import.html  struct.Jump.html  struct.NoneValue.html  struct.QueryResMut.html  struct.Raise.html  struct.Return.html  struct.Slice.html  struct.Try.html  struct.UnaryOperation.html  (+6 more)
doc/pyrev_ast_derive/: all.html  derive.Common.html  derive.Expression.html  derive.GetOffset.html  derive.Is.html  derive.Query.html  derive.Unwrap.html  index.html  sidebar-items.js
doc/pyrev_core/: all.html  index.html  macro.error.html  macro.info.html  macro.warn.html  sidebar-items.js
doc/pyrev_pyc/: all.html  index.html
examples/: run-all.rs
src/: app.rs  bytecodemap.rs  lib.rs  main.rs
src/bytecode/: app.rs  ast.rs  binary.rs  bytecode.rs  bytecode_type.rs  common.rs  decompile.rs  mod.rs  op.rs  opcode.rs  operator.rs  parse_opcode.rs  types.rs  utils.rs  valuetype.rs
src/color/: color.rs  color_utils.rs  mod.rs
src/core/: app.rs  ast.rs  common.rs  decompile.rs  mod.rs  opcode.rs  parse_opcode.rs  types.rs
src/pyrev_app/: Cargo.toml
src/pyrev_ast/: Cargo.toml
src/pyrev_ast_derive/: Cargo.toml
src/pyrev_ast_derive/src/: lib.rs
src/pyrev_core/: Cargo.toml
src/pyrev_marshal/: Cargo.toml
src/pyrev_object/: Cargo.toml
src/pyrev_pyc/: Cargo.toml
src/pyrev_pyc_macro/: Cargo.toml
src/pyrev_pyinstaller/: Cargo.toml
src/pyrev_pyinstaller/src/: lib.rs  pyinst_archive.rs
test/: Bytecode.txt  assert.py  assert.txt  async.py  async.txt  attr.py  attr.txt  branch.py  class.py  class.txt  container.py  container.txt  def.py  def.txt  demo.py  demo.txt  except.py  except.txt  for.py  for.txt  ifelse.py  ifelse.txt  import.py  import.txt  op.py  op.txt  with.py  with.txt  yield.py  yield.txt
test/pyc_test/: demo1.py
(+225 files in other folders)
