workspace = { members = [ "src/pyrev_ast", "src/pyrev_ast_derive" , "src/pyrev_core", "src/pyrev_pyc"] }

[package]
name = "pyrev"
authors = ["hacbit <hacbit@foxmail.com>"]
version = "1.0.10"
edition = "2021"
description = "A Python bytecode reverse engineering tool."
build = "build.rs"
license = "MIT"

[dependencies]
atty = "0.2.14"

[dependencies.clap]
version = "4.5.1"
features = ["derive", "cargo"]

[dependencies.pyrev_core]
path = "src/pyrev_core"

[dependencies.pyrev_pyc]
path = "src/pyrev_pyc"
optional = true

[profile.dev]
# Uncomment the following lines to allow clippy to break your build.
# rustflags = ["-D", "warnings"]
panic = "unwind"
lto = true
opt-level = 3

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[features]
default = []
clippy = []
pyc = ["pyrev_pyc"]
all = [
    "pyrev_pyc"
]