workspace = { members = [ 
    "src/pyrev_ast", 
    "src/pyrev_ast_derive" , 
    "src/pyrev_core", 
    "src/pyrev_app", 
    "src/pyrev_pyc"
] }

[package]
name = "pyrev"
authors = ["hacbit <hacbit@foxmail.com>"]
version = "1.0.10"
edition = "2021"
description = "A Python bytecode reverse engineering tool."
build = "build.rs"
license = "MIT"

[dependencies]

[dependencies.pyrev_app]
path = "src/pyrev_app"

[dependencies.pyrev_pyc]
path = "src/pyrev_pyc"

[profile.dev]
# Uncomment the following lines to allow clippy to break your build.
# rustflags = ["-D", "warnings"]
panic = "unwind"
lto = true
opt-level = 3

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[features]
