[package]
name = "pyrev_ast_derive"
version = "1.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
regex = "1.10.2"

[dependencies.syn]
version = "2.0.50"
features = ["full"]

[lib]
proc-macro = true